[package]
name = "debarchive"
version = "0.1.0"
description = "Debian archive reader / extractor"
repository = "https://github.com/pop-os/debarchive"
license = "MIT"
authors = ["Michael Aaron Murphy <mmstickman@gmail.com>"]
readme = "README.md"
keywords = ["debian", "archive", "apt"]
categories = ["os::unix-apis"]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
ar = "0.6.0"
tar = "0.4.17"
xz2 = "0.1.5"
libflate = "0.1.18"
